--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,2 +1,85 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+
+*{
+  box-sizing: border-box;
+
+}
+
+body{
+  background: black;
+}
+
+.bg_img{
+  display: none;
+  object-fit: contain;
+  width: 100%;
+  height: 500px;
+  position: absolute;
+  right: 0;
+  margin: auto 0;
+  -webkit-clip-path: ellipse(105% 100% at 50% 0%);
+  clip-path: ellipse(105% 100% at 50% 0%);
+}
+.bg_div{
+
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+
+
+
+}
+.container-fluid{
+
+}
+.container-fluid> h1{
+  background-image: url("../img/train1_BG.jpg");
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+  background-size: cover;
+  background-position: center;
+  position: absolute;
+  font-size: 4.5em;
+  font-weight: 600;
+  margin-left:1em;
+  color: transparent;
+
+}
+.container-fluid> h1>span{
+
+
+}
+nav{
+  background: white;
+  border-bottom: 1px solid #d9d9d9;
+}
+
+.login{
+  color: black;
+  font-size: 1.5rem;
+}
+
+/*-------------------------*/
+#main_btn
+{
+ /* position: absolute;
+  left: 2em;*/
+  margin: 0 auto;
+  color: black;
+  align-self: flex-end ;
+  font-weight: 600;
+  font-size: 1.2em;
+  padding: 0.5em 1em;
+  z-index: 99;
+  border-radius: 100vh;
+  border: 1px solid black;
+  background: white;
+
+}
+
+.btn-container{
+  height: 70vh;
+}
 
 
