--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -3,12 +3,14 @@
 :root {
     --header-height: 3rem;
     --nav-width: 68px;
-    --first-color: #4723D9;
+    --first-color: #1c62a9;
     --first-color-light: #AFA5D9;
     --white-color: #F7F6FB;
     --body-font: 'Nunito', sans-serif;
     --normal-font-size: 1rem;
-    --z-fixed: 100
+    --z-fixed: 100;
+    --tab-ic:#2eaf57;
+    --tab-cancel:#bd0000;
 }
 
 *,
@@ -148,6 +150,20 @@ a {
 
 .height-100 {
     height: 100vh
+}
+
+.dashEdit{
+    color: var(--tab-ic);
+    border-radius: 50%;
+    background: #c2ffd3;
+    padding: 0.5em;
+}
+.dashCancel{
+    color:var(--tab-cancel);
+    background: #ff7272;
+    padding: 0.5em;
+    border-radius: 50%;
+
 }
 
 @media screen and (min-width: 768px) {
