--- a/public/css/style.css
+++ b/public/css/style.css
@@ -86,5 +86,18 @@ nav{
   margin-left: 10px;
   font-size: 1em;
 }
+.tripcordinate{
+  display: inline-block;
+  padding: 0.5em 1em;
+  font-size: 1.5em;
+}
+.tripcordinate>span{
+  font-size: 0.6em;
+}
+
+.available{
+  color: #2eaf57;
+
+}
 
 
