--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -166,6 +166,11 @@ a {
 
 }
 
+a{
+    color: none;
+}
+
+
 @media screen and (min-width: 768px) {
     body {
         margin: calc(var(--header-height) + 1rem) 0 0 0;
